# roy

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml  release.yml  test.yml
src/: chat_completion.rs  chat_completions.rs  lib.rs  main.rs  models.rs  responses.rs  server_state.rs
tests/: chat_completions.rs  responses.rs
