[package]
name = "roy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lipsum = "0.9"
tiktoken-rs = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.98"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
log = "0.4.27"
once_cell = "1.21.3"
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.5"
humantime = "2.1"

[dev-dependencies]
tempfile = "3.20.0"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

[[test]]
name = "chat_completions"
path = "tests/chat_completions.rs"
