[package]
name = "roy-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/masci/roy"
description = "Emulate the OpenAI API simulating rate limits and errors."
readme = "README.md"
exclude = [".github/*"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lipsum = "0.9"
tiktoken-rs = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.98"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
log = "0.4.27"
once_cell = "1.21.3"
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.5"
humantime = "2.1"
colored = "2"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["timeout"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.20.0"
hyper = { version = "0.14", features = ["full"] }

[[bin]]
name = "roy"
path = "src/main.rs"
